fixed readability

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,8 @@ html {
 }
 
 p {
-    font-size: 16px;
+    font-size: 300px !important;
+    padding: 0;
 }
 
 header {
